force-app/main/default/objects/Question__c/fields/Answer_A__c.field-meta.xml
<CustomField>
    <fullName>Answer_A__c</fullName>
    <label>Answer_A</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>