force-app/main/default/objects/Question__c/fields/Answer_B__c.field-meta.xml
<CustomField>
    <fullName>Answer_B__c</fullName>
    <label>Answer_B</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>