force-app/main/default/objects/Question__c/fields/Answer_C__c.field-meta.xml
<CustomField>
    <fullName>Answer_C__c</fullName>
    <label>Answer_C</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>