force-app/main/default/objects/Question__c/fields/Answer_D__c.field-meta.xml
<CustomField>
    <fullName>Answer_D__c</fullName>
    <label>Answer_D</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>