force-app/main/default/objects/Question__c/fields/Answer_E__c.field-meta.xml
<CustomField>
    <fullName>Answer_E__c</fullName>
    <label>Answer_E</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>