force-app/main/default/objects/Question__c/fields/Certification_Exam__c.field-meta.xml
<CustomField>
    <fullName>Certification_Exam__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Certification Exam</label>
    <referenceTo>Certification_Exam__c</referenceTo>
    <relationshipLabel>Question</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <type>Lookup</type>
</CustomField>